--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "faker": "^4.1.0",
     "json-server": "^0.14.2",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "webpack": "^4.28.3"
   },
   "eslintConfig": {
     "extends": "react-app"
