--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://github.com/Briandv198/Platzi-Badges",
   "name": "platzi-badges",
   "version": "0.1.0",
   "private": true,
@@ -8,7 +9,9 @@
     "server": "json-server --port 3001 --watch server/db.json",
     "seed": "node server/seed.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "prod": "webpack --mode production",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@babel/core": "7.2.2",
@@ -66,9 +69,11 @@
   },
   "devDependencies": {
     "faker": "^4.1.0",
+    "gh-pages": "^3.2.0",
     "json-server": "^0.14.2",
     "npm-run-all": "^4.1.5",
-    "webpack": "^4.28.3"
+    "webpack": "^4.28.3",
+    "webpack-cli": "^4.7.2"
   },
   "eslintConfig": {
     "extends": "react-app"
